--- a/android/app/src/profile/AndroidManifest.xml
+++ b/android/app/src/profile/AndroidManifest.xml
@@ -4,4 +4,9 @@
          to allow setting breakpoints, to provide hot reload, etc.
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!-- This permission is necessary to receive SMS messages in the app,
+         which can be used for automatically detecting SMS verification codes.
+    -->
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
 </manifest>
